@@ -332,7 +332,7 @@ bind "End" "$;";
 bind "^" "0;";
 bind "$" "$;";
 #bind "Backspace" "prev"; # console code for C-h and Backspace is the same :-)
-bind "'" "goto _lastfileindex"; 
+bind "'" "goto _lastfileindex";
 bind '"' "scale 'shadow';i:fresh=1;redisplay;"; 
 bind '(' "goto '^p'";
 bind ')' "goto '$p'";
